# antikythera

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  hatch_build.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-orchestrator.txt  requirements.txt  tasks.py  toy_problem_0.json  toy_problem_1.json  toy_problem_2.json  toy_problem_4.json  toy_problem_4_inner.json  toy_problem_4_nested.json  toy_problem_5.json  toy_problem_5_inner_pnp.json  toy_problem_6.json  toy_problem_6_inner.json  toy_problem_7.json  versions.json
.agents/: re-dispatch-unclaimed-tasks.md
.agents/re-dispatch/issues/: 01-core-implementation.md  02-tests.md  progress.txt
.github/workflows/: build.yml  docker.yml  docs.yml  pr-checks.yml  release.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/changelog/: index.html
0.1.0/installation/: index.html
0.1.0/introduction/: index.html
0.1.0/license/: index.html
0.1.0/reference/antikythera/: index.html
0.1.0/reference/antikythera.io/: index.html
0.1.0/reference/antikythera.models/: index.html
0.1.0/reference/antikythera.models.blueprints/: index.html
0.1.0/reference/antikythera.models.tasks/: index.html
0.1.0/reference/antikythera_agents/: index.html
0.1.0/reference/antikythera_agents.base_agent/: index.html
0.1.0/reference/antikythera_ghpython/: index.html
0.1.0/reference/antikythera_orchestrator.api/: index.html
0.1.0/reference/antikythera_orchestrator.orchestrator/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/changelog/: index.html
0.1.1/installation/: index.html
0.1.1/introduction/: index.html
0.1.1/license/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/changelog/: index.html
0.1.2/installation/: index.html
0.1.2/introduction/: index.html
0.1.2/license/: index.html
0.1.2/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/changelog/: index.html
0.2.0/installation/: index.html
0.2.0/introduction/: index.html
0.2.0/license/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/changelog/: index.html
0.3.0/installation/: index.html
0.3.0/introduction/: index.html
0.3.0/license/: index.html
0.3.0/search/: search_index.json
0.3.1/: 404.html  conf.py  index.html  objects.inv  sitemap.xml
0.3.1/changelog/: index.html
0.3.1/installation/: index.html
0.3.1/introduction/: index.html
0.3.1/license/: index.html
0.3.1/search/: search_index.json
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/changelog/: index.html
0.4.0/installation/: index.html
0.4.0/introduction/: index.html
0.4.0/license/: index.html
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/changelog/: index.html
0.4.1/installation/: index.html
0.4.1/introduction/: index.html
0.4.1/license/: index.html
0.4.1/search/: search_index.json
docs/: api.rst  changelog.md  index.md  index.rst  installation.md  installation.rst  introduction.md
docs/api/: antikythera.rst
docs/reference/: antikythera.io.md  antikythera.md  antikythera.models.blueprints.md  antikythera.models.md  antikythera.models.tasks.md  antikythera_agents.base_agent.md  antikythera_agents.context.md  antikythera_agents.decorators.md  antikythera_agents.io_agent.md  antikythera_agents.launcher.md  antikythera_agents.md  antikythera_agents.user_interaction.md  antikythera_ghpython.md  antikythera_orchestrator.api.md  antikythera_orchestrator.conditionals.md  antikythera_orchestrator.md  antikythera_orchestrator.orchestrator.md  antikythera_orchestrator.scopes.md  antikythera_orchestrator.sequencers.md  antikythera_orchestrator.storage.interfaces.md  antikythera_orchestrator.storage.md  antikythera_orchestrator.storage.redis_storage.md
examples/: scope_retry.json  scope_skip.json  scope_while.json  toy_problem_0.json  toy_problem_1.json  toy_problem_10_competitive.json  toy_problem_12_notification.json  toy_problem_13_test_skipping.json  toy_problem_2.json  toy_problem_4_inner.json  toy_problem_5.json  toy_problem_6.json  toy_problem_8.json
latest/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
latest/api/: antikythera.html
scripts/: blueprint_composer.ghx  blueprint_composer.py  blueprint_start.ghx  dump_mqtt_traffic.py  dump_session_data.py  model_nesting_packager.py  visualize_session_dump.py
src/antikythera/: __init__.py  __main__.py  compat.py  config.py  io.py  parsers.py  plugin.py
src/antikythera_agents/: __init__.py  __main__.py  agent.py  base_agent.py  cli.py  context.py  decorators.py  demo.py  io_agent.py  launcher.py  moveit.py  system.py  user_interaction.py
src/antikythera_ghpython/: __init__.py
src/antikythera_orchestrator/: __init__.py  __main__.py  api.py  conditionals.py  mcp_server.py  orchestrator.py  scopes.py  sequencers.py  session_events.py  storage.py  storage_mock.py  system_agents.py
tests/: conftest.py  test_blueprint_validation.py  test_blueprint_validation_manual.py  test_restart_endpoint.py  test_simple_session.py  test_sse_endpoint.py  test_upload_endpoint.py
tests/agents/: test_fall_demo_agents.py  test_io_agent.py
tests/models/: test_blueprint_validation.py  test_blueprints.py  test_io.py  test_process.py  test_protobuf.py  test_task_condition.py  test_task_syntax.py  test_validation.py
tests/orchestrator/: conftest.py  test_conditionals.py  test_orchestrator_basics.py  test_orchestrator_composite.py  test_orchestrator_data_flow.py  test_orchestrator_datastore_callbacks.py  test_orchestrator_dependencies.py  test_orchestrator_dynamic.py  test_orchestrator_errors.py  test_orchestrator_lifecycle.py  test_orchestrator_preprocess.py  test_orchestrator_redispatch.py  test_orchestrator_running_blueprints.py  test_orchestrator_scopes.py  test_storage.py
(+133 files in other folders)
