[build-system]
requires = ["hatchling", "hatch-requirements-txt", "invoke", "compas_invocations2", "compas_pb", "grpcio-tools"]
build-backend = "hatchling.build"

# ============================================================================
# project info
# ============================================================================

[project]
name = "antikythera-sdk"
description = "An all knowing, all controlling, robotic and otherwise, process manager."
keywords = ["magic", "orchestrator", "fabrication", "robotics", "automation", "architecture", "distributed systems", "events"]
authors = [
    { name = "Gonzalo Casas", email = "casas@arch.ethz.ch" },
    { name = "Chen Kasirer", email = "kasirer@arch.ethz.ch" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dynamic = ['dependencies', 'optional-dependencies', 'version']
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points.'antikythera.agents']
system = 'antikythera_orchestrator.system_agents'
interaction = 'antikythera_agents.user_interaction'
moveit = 'antikythera_agents.moveit'
io = 'antikythera_agents.io_agent'

[project.scripts]
antikythera = "antikythera_orchestrator.__main__:main"
antikythera-agents = "antikythera_agents.__main__:main"

[project.entry-points.'compas_pb.plugins']
serializers = 'antikythera.models.conversions'

[project.urls]
Homepage = "https://gramaziokohler.github.io/antikythera"
Documentation = "https://gramaziokohler.github.io/antikythera"
Repository = "https://github.com/gramaziokohler/antikythera"
Changelog = "https://github.com/gramaziokohler/antikythera/blob/main/CHANGELOG.md"
Issues = "https://github.com/gramaziokohler/antikythera/issues"
Forum = "https://forum.compas-framework.org/"

# ============================================================================
# hatch config
# ============================================================================

[tool.hatch.version]
path = "src/antikythera/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]
deployment = ["requirements-orchestrator.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/antikythera", "src/antikythera_agents", "src/antikythera_ghpython", "src/antikythera_orchestrator"]

[tool.hatch.build.targets.sdist]
include = ["src", "tasks.py", "requirements.txt", "requirements-dev.txt", "requirements-orchestrator.txt"]
artifacts = ["src/antikythera/proto/antikythera_pb2.py", "src/antikythera/proto/antikythera_pb2.pyi"]

# ============================================================================
# replace pytest.ini
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src/antikythera"]
python_files = ["test_*.py", "*_test.py", "test.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--doctest-glob=*.rst",
    "--tb=short",
    "--import-mode=importlib",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
    "NUMBER",
]

# ============================================================================
# replace bumpversion.cfg
# ============================================================================

[tool.bumpversion]
current_version = "0.1.0"
message = "Bump version to {new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/antikythera/__init__.py"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"

# ============================================================================
# replace setup.cfg
# ============================================================================

[tool.black]
extend-exclude = '(/[a-zA-Z\./]*[\s]?)'  # exclude everything, black should be removed..

[tool.ruff]
line-length = 179
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
"tasks.py" = ["I001"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["antikythera", "antikythera_agents", "antikythera_ghpython", "antikythera_orchestrator"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 179

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

